@@ -1,0 +1,2 @@
+MD5 6dd599f24b7abecd1e32c203eaa7fa8a linuxtv-dvb-1.1.1.tar.bz2 327271
+MD5 7b263de6b0b92d2347319c65adc7d4fb dvb-ttpci-01.fw-261c 226376
